fixed alignment of detail page

--- a/src/components/CardDetail/_CardDetail.scss
+++ b/src/components/CardDetail/_CardDetail.scss
@@ -21,6 +21,7 @@
 .company-spans {
   flex-flow: wrap;
   justify-content: space-around;
+  align-items: center;
   span {
     background-color: silver;
     padding: 0 0.5rem;
